# codechecker

./: .gitignore  AGENTS.md  MANIFEST.in  Makefile  colorful-day-investigation.md  import_rewriter.py  import_rewriting_guide.md  pyproject.toml  rename_report_converter.py  setup.py
.github/workflows/: install-deps.sh  pip-install.yml  pypi.yml  test.local.yml  test.yml
analyzer/: Makefile
analyzer/codechecker_analyzer/: analysis_manager.py  analyzer.py  analyzer_context.py  makefile.py  pre_analysis_manager.py
analyzer/codechecker_analyzer/analyzers/: config_handler.py
analyzer/codechecker_analyzer/buildlog/: log_parser.py
analyzer/codechecker_analyzer/cmd/: checkers.py
analyzer/tools/build-logger/: Makefile
analyzer/tools/merge_clang_extdef_mappings/: Makefile
analyzer/tools/statistics_collector/: Makefile
codechecker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
codechecker_common/: __init__.py  cli.py  logger.py  source_code_comment_handler.py  util.py
codechecker_common/cli_commands/: install_api.py
codechecker_common/compatibility/: multiprocessing.py
docs/: README.md
docs/adr/: 0001-unify-multiprocessing-via-multiprocess-spawn.md  0002-cross-platform-server-process-model.md  0003-spawn-performance-findings.md
docs/web/: authentication.md
snap/: snapcraft.yaml
tools/: report-converter
tools/bazel/: Makefile
tools/report-converter/: Makefile
tools/tu_collector/: Makefile
web/: Makefile
web/api/: Makefile
web/codechecker_web/shared/: version.py  webserver_context.py
web/server/codechecker_server/: server.py
web/tests/: Makefile
(+23 files in other folders)
